--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="vlt-navbar-background"></div>
 <div class="vlt-navbar-inner">
 <div class="vlt-navbar-inner--left">
-<a class="vlt-navbar-logo" href="index-2.html"><img src="assets/img/root/logo.svg" alt="Gilber"></a>
+<a class="vlt-navbar-logo" href="index.html"><img src="assets/img/root/logo.svg" alt="Gilber"></a>
 </div>
 <div class="vlt-navbar-inner--center">
 <div class="container">
